tenzir/tests/node/run/runtime_errors.txt
error: json parser: SCALAR_DOCUMENT_AS_VALUE: A JSON document made of a scalar (number, Boolean, null or string) is treated as a value. Use get_bool(), get_double(), etc. on the document instead. 
 --> node/run/runtime_errors.tql:4:15
  |
4 | pipeline::run {
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: found invalid JSON 'x
          1
          '
  = note: failed to wait for pipeline
